packages/ui/assets/css/components/menu.css
.aw-menu {
    color: theme('onColors.brand');
    background-color: theme('colors.brand');
    display: flex;
    flex-direction: column;
    width: theme('spacing.64', 16rem);
    box-shadow: 5px 0 10px -3px rgba(0, 0, 0, 0.25), 2px 0 5px -2px rgba(0, 0, 0, 0.05);
    max-width: 100%;

    /* mobile transition */
    transform: translateX(-100%);
    opacity: 0;
    transition: 200ms transform, 0ms opacity 200ms;

    position: fixed;
    left: 0;
    top: 0;
    bottom: 0;
    z-index: 20;

    /* mobile transition */
    &.is-visible {
        transform: none;
        opacity: 1;
        transition: 250ms transform ease-out-quad;
    }

    &__logo {
        order: -1;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-shrink: 0;
        padding: theme('spacing.4', 1rem);
        background-color: color(theme('colors.overlay') a(0.4));
        min-height: theme('spacing.12');
    }

    &__homelink:focus {
        outline: none;
    }

    &__menu {
        position: relative;
        flex-grow: 1;
        overflow-x: hidden;
        overflow-y: auto;
        scrollbar-width: thin;
        scrollbar-color: var(--c-fade-brand) transparent;
        background-image: linear-gradient(
            theme('colors.brand'),
            color(theme('colors.brand') h(+4)),
            color(theme('colors.brand') h(+16))
        );

        &::-webkit-scrollbar {
            width: 6px;
            height: 6px;
            background-color: transparent;
        }

        &::-webkit-scrollbar-thumb {
            background-color: var(--c-fade-brand);
        }
    }

    &__width-toggler {
        display: none;
    }
}

@screen lg {
    .aw-menu {
        transform: none;
        opacity: 1;
        width: auto;
        will-change: width;

        &__logo {
            padding: 0;
            min-height: theme('spacing.32');
        }

        &__homelink {
            padding: theme('spacing.2', 0.5rem);
            will-change: max-width, opacity;
            max-width: theme('spacing.64', 16rem);
            transition: 100ms 150ms ease-out;
            transition-property: opacity, max-width;
        }

        &__width-toggler {
            background-color: theme('colors.brand');

            display: flex;
            align-items: center;
            justify-content: center;
            width: theme('spacing.6');
            height: theme('spacing.6');
            border-radius: 50%;

            position: absolute;
            top: theme('spacing.3');
            right: calc(-1 * theme('spacing.3'));

            transform: rotate(90deg);
            transition: 250ms transform ease-out;

            &:before {
                content: '';
                background-color: theme('colors.surface');

                position: absolute;
                left: 0;
                top: 0;
                width: 100%;
                height: 100%;
                border-radius: 50%;

                opacity: 0;
                transition: 120ms opacity;
            }

            &:hover,
            &:focus {
                outline: none;

                &:before {
                    opacity: 0.2;
                }
            }
        }

        &__menu {
            width: theme('spacing.64', 16rem);
            overflow: hidden;
            transition: 250ms width;

            &:hover {
                overflow: auto;
                overflow: overlay;
                -ms-overflow-style: -ms-autohiding-scrollbar;
            }

            & > * {
                opacity: 1;
                transition: 70ms opacity 180ms;
            }
        }

        /* thin menu */
        &.is-thin &__menu {
            width: theme('spacing.10', 2.5rem);

            & > * {
                opacity: 0;
                transition: none;
            }
        }

        &.is-thin &__menu:hover {
            width: theme('spacing.64', 16rem);

            & > * {
                opacity: 1;
                transition: 70ms opacity 180ms ease-out;
            }
        }

        &.is-thin &__width-toggler {
            transform: rotate(-90deg);
        }

        &.is-thin &__homelink {
            opacity: 0;
            max-width: theme('spacing.10', 2.5rem);
            pointer-events: none;
            transition: 70ms ease-out;
            transition-property: opacity, max-width;
        }

        &.is-thin &__menu:hover + &__logo > &__homelink {
            opacity: 1;
            max-width: theme('spacing.64', 16rem);
            transition: 100ms 150ms ease-out;
            transition-property: opacity, max-width;
        }
    }
}

